<resources>
    <string name="app_name">HelloWorldApplication</string>
    <string name="message">Merhaba Dünya</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="clict_to_login">Clict to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="hello_world">Hello World</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="department">Department</string>
    <string name="grade">Grade</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="profil">Profil</string>
    <string name="ev_ara">Ev Ara</string>
    <string name="durum">Durum</string>
    <string name="home_duration">Evde Kalınacak Süre</string>
    <string name="friend_duration">Evi Paylaşabileceği Süre</string>
    <string name="home_distance">Kampüse İstenen Uzaklık</string>
    <string name="friend_distance">Kampüse Olan Ev Uzaklığı</string>
    <string name="s_re">Süre</string>
    <string name="uzakl_k">Uzaklık</string>
    <string name="renciler">Öğrenciler</string>
    <string name="filtrele">Filtrele</string>
    <string name="mesafe">Mesafe</string>
    <string name="talepler">Talepler</string>
</resources>