<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="Mehmet İvriz" />


    <Button
        android:id="@+id/btn_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil" />

    <Button
        android:id="@+id/btn_students"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/renciler" />

    <Button
        android:id="@+id/btn_requests"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:text="@string/talepler" />


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:text="Çıkış" />


</LinearLayout>