<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Students">


    <LinearLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/filterEditTextDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/s_re"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/filterEditTextDistance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/mesafe"
            android:inputType="text"
            android:maxLines="1" />


        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filtrele" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filterLayout" />

</RelativeLayout>